June/Kyverno on AKS/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    owner: promise
  name: pls
